# jvm-cpp

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  cmake_install.cmake  configure  configure.bat  configure.sh  hello.class.bak  main.cpp
libs/libzip/: Makefile.in  aclocal.m4  cmake_install.cmake  config.h  config.h.in  configure
libs/libzip/examples/: Makefile.in  cmake_install.cmake  in-memory
libs/libzip/lib/: cmake_install.cmake
libs/libzip/man/: Makefile.in  cmake_install.cmake  zip_name_locate.man  zip_set_file_compression.man
libs/libzip/regress/: CTestTestfile.cmake  Makefile.in  add_from_filep  cmake_install.cmake  fopen_unchanged  fread  fseek  runtest  tryopen
libs/libzip/src/: Makefile.in  cmake_install.cmake  hole  zipcmp  zipmerge  ziptool
regress/: runtest
src/: AttributeInfo.cpp  CMakeLists.txt  ClassFile.cpp  ClassFile.h  ClassReader.cpp  ClassReader.h  ConstantPool.cpp  ConstantPool.h  Jvm.cpp  Jvm.h  Jvm.hpp  classpath.cpp  classpath.h  cmake_install.cmake  error.cpp  error.h  error.hpp  util.cpp  util.h  util.hpp
src/fileparser/: AttributeInfo.cpp  AttributeInfo.h  AttributeInfo.hpp  ClassFile.cpp  ClassFile.h  ClassFile.hpp  ClassReader.cpp  ClassReader.h  ClassReader.hpp  ConstantPool.cpp  ConstantPool.h  ConstantPool.hpp  classpath.cpp  classpath.hpp
src/instructions/: Comparisons.cpp  Comparisons.h  Comparisons.hpp  Constants.cpp  Constants.h  Constants.hpp  Control.cpp  Control.h  Control.hpp  Conversions.cpp  Conversions.h  Conversions.hpp  Extended.cpp  Extended.h  Extended.hpp  Factory.cpp  Factory.h  Factory.hpp  Instruction.cpp  Instruction.h  Instruction.hpp  Loads.cpp  Loads.h  Loads.hpp  Mathe.cpp  Mathe.h  Mathe.hpp  Store.cpp  Store.h  Store.hpp  references.cpp  references.hpp  stack.cpp  stack.h  stack.hpp
src/rtda/: Frame.cpp  Frame.h  Object.cpp  Object.h  Slot.cpp  Slot.h  Slot.hpp  Stack.cpp  Stack.h  Thread.cpp  Thread.h  Thread.hpp  error.cpp  error.h
src/rtda/heap/: AccessFlags.cpp  AccessFlags.hpp  Class.cpp  Class.hpp  RunTimeConstantPool.cpp  RunTimeConstantPool.hpp
