cmake_minimum_required(VERSION 3.8)
project(jvm)


set(CMAKE_CXX_STANDARD 17)
add_subdirectory(docopt)
#add_subdirectory(libzip)
#set(CMAKE_CXX_FLAGS_DEBUG "-O0 -lboost_system -lboost_filesystem")
#set(CMAKE_CXX_FLAGS_RELEASE "-O2 -lboost_system -lboost_filesystem")
find_package( Boost COMPONENTS system filesystem REQUIRED ) #whatever libs you need
include_directories(libzip)
include_directories(docopt)
include_directories(src)
include_directories(src/rtda)
include_directories(src/fileparser)
include_directories(src/instructions)
include_directories(src/rtda/heap)

aux_source_directory(src SOURCE_FILES)
aux_source_directory(src/rtda SOURCE_FILES)
aux_source_directory(src/rtda/heap SOURCE_FILES)
aux_source_directory(src/fileparser SOURCE_FILES)
aux_source_directory(src/instructions SOURCE_FILES)
link_directories("docopt")
add_executable(jvm main.cpp ${SOURCE_FILES})
target_link_libraries(jvm ${Boost_LIBRARIES})
target_link_libraries(jvm libdocopt.a)
target_link_libraries(jvm libzip.a)
